--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ToDo List</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" defer></script>
+  <script src="https://kit.fontawesome.com/efbd7c5f89.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
-  <h1></h1>
+  <header>ToDo List</header>
+  <nav class='navMenu'>
+    <div class="basicMenu">
+      <ul>
+        <li><button id="home">Home</button></li>
+        <li> <button id="today">Today</button></li>
+        <li><button id="week">This week</button></li>
+        <li><button id="projects">Projects</button></li>
+      </ul>
+    </div>
+    <div class="projectsDiv"></div>
+    <div class="addButton"><button><i class="fa-solid fa-plus fa-4x"></i></button></div>
+  </nav>
+  <div class="mainContent"></div>
 </body>
 
 
