--- a/index.html
+++ b/index.html
@@ -26,20 +26,35 @@
       <div class="projectsDiv"></div>
       <div id="addButton"><button><i class="fa-solid fa-plus fa-4x"></i></button></div>
     </nav>
-    <div class="mainContent">a</div>
+    <div class="mainContentGrid">
+      <div class="mainContent">
+        <h3>Filter name</h3>
+        <div class="taskDiv">
+          <div class="leftSide">
+            <input type="checkbox" id="taskCheck">
+            <div class="title">titulo</div>
+          </div>
+          <div class="rightSide">
+            <div class="dueDate"></div>
+            <button class="edit">Edit</button>
+            <button class="remove">Remove</button>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="taskPopUp">
       <form action="">
         <h2>Create a new task</h2>
         <input type="text" id="taskTitle" placeholder="Task Title" maxlength="30" required>
-        <textarea  cols="35" rows="5" id="taskContent" placeholder="Task Content" required></textarea>
-        <input type="text" id="taskProject" list="projectList" placeholder="Project Name"required>
-          <datalist id="projectList"></datalist>
-        
+        <textarea cols="35" rows="5" id="taskContent" placeholder="Task Content" required></textarea>
+        <input type="text" id="taskProject" list="projectList" placeholder="Project Name" required>
+        <datalist id="projectList"></datalist>
+
         <div class="dueDate">DueDate: <input type="date" id="taskDueDate" placeholder="DueDate" required></div>
-        <div class="priorityDiv" id="taskPriority">Priority: <label for="Highpriority">High</label><input type="radio" id="highPriority"
-            name="priority" value="high"><label for="Midpriority">Mid</label>
-          <input type="radio" id="Midpriority" name="priority" value="mid" required><label for="lowPriority">Low</label><input
-            type="radio" id="lowPriority" name="priority" value="low">
+        <div class="priorityDiv" id="taskPriority">Priority: <label for="Highpriority">High</label><input type="radio"
+            id="highPriority" name="priority" value="high"><label for="Midpriority">Mid</label>
+          <input type="radio" id="Midpriority" name="priority" value="mid" required><label
+            for="lowPriority">Low</label><input type="radio" id="lowPriority" name="priority" value="low">
         </div>
         <div class="completedBtn">Check if Completed <input type="checkbox" id="taskCompleted"></div>
         <div class="PopupBtn"><button id="confirmBtn" type="submit">Confirm</button>
