--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </div>
     <div class="taskPopUp">
-      <form action="">
+      <form action="" id="taskForm">
         <h2>Create a new task</h2>
         <input type="text" id="taskTitle" placeholder="Task Title" maxlength="30" required>
         <textarea cols="35" rows="5" id="taskContent" placeholder="Task Content" required></textarea>
