edit function created, but need to fix some bugs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="taskPopUp">
       <form action="" id="taskForm">
-        <h2>Create a new task</h2>
+        <h2 id="popupTitle">Create a new task</h2>
         <input type="text" id="taskTitle" placeholder="Task Title" maxlength="30" required>
         <textarea cols="35" rows="5" id="taskContent" placeholder="Task Content" required></textarea>
         <input type="text" id="taskProject" list="projectList" placeholder="Project Name" required>
