projects menu added

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
           <li><button id="home">Home</button></li>
           <li> <button id="today">Today</button></li>
           <li><button id="week">This week</button></li>
-          <li><button id="projectBtn">Projects</button></li>
+          <li><button id="projectBtn">Projects</button><div id="projectsDiv"></div></li>
         </ul>
       </div>
-      <div class="projectsDiv"></div>
+      
       <div id="addButton"><button><i class="fa-solid fa-plus fa-4x"></i></button></div>
     </nav>
     <div class="mainContentGrid">
