--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <title>ToDo List</title>
   <link rel="stylesheet" href="styles.css">
   <!-- <script src="/node_modules/date-fns/"></script> -->
-  <script  src="script.js" defer></script>
+  <script  type="module" src="script.js" defer></script>
+  <script type="module"  src="Ui.js" defer></script>
   <script src="https://kit.fontawesome.com/efbd7c5f89.js" crossorigin="anonymous"></script>
 </head>
 
