--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo List</title>
   <link rel="stylesheet" href="styles.css">
-    <script type="module"  src="Ui.js" defer></script>
+  <!-- <script src="/node_modules/date-fns/"></script> -->
+  <script  type="module" src="script.js" defer></script>
+  <script type="module"  src="Ui.js" defer></script>
   <script src="https://kit.fontawesome.com/efbd7c5f89.js" crossorigin="anonymous"></script>
 </head>
 
